--- a/chat.html
+++ b/chat.html
@@ -73,6 +73,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span> Your screen is too big ㅠㅠ </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a23f2f40df.js"
       crossorigin="anonymous"
