--- a/chats.html
+++ b/chats.html
@@ -84,6 +84,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span> Your screen is too big ㅠㅠ </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a23f2f40df.js"
       crossorigin="anonymous"
