--- a/friends.html
+++ b/friends.html
@@ -111,6 +111,10 @@
       <i class="fas fa-comment"></i>
     </div>
 
+    <div id="no-mobile">
+      <span> Your screen is too big ㅠㅠ </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a23f2f40df.js"
       crossorigin="anonymous"
