--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span> Your screen is too big ㅠㅠ </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a23f2f40df.js"
       crossorigin="anonymous"
