Update no-mobile message

--- a/more.html
+++ b/more.html
@@ -111,7 +111,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span> Your screen is too big ㅠㅠ <br> Please make the screen width smaller. </span>
+      <span> Your screen is too big ㅠㅠ <br /> make the screen width smaller. </span>
+
     </div>
 
     <script
