--- a/chat.html
+++ b/chat.html
@@ -74,7 +74,10 @@
     </form>
 
     <div id="no-mobile">
-      <span> Your screen is too big ㅠㅠ </span>
+      <span>
+        Your screen is too big ㅠㅠ <br />
+        Please make the screen width smaller.
+      </span>
     </div>
 
     <script
