--- a/chats.html
+++ b/chats.html
@@ -85,7 +85,10 @@
     </nav>
 
     <div id="no-mobile">
-      <span> Your screen is too big ㅠㅠ </span>
+      <span>
+        Your screen is too big ㅠㅠ <br />
+        Please make the screen width smaller.
+      </span>
     </div>
 
     <script
