--- a/friends.html
+++ b/friends.html
@@ -112,7 +112,10 @@
     </div>
 
     <div id="no-mobile">
-      <span> Your screen is too big ㅠㅠ </span>
+      <span>
+        Your screen is too big ㅠㅠ <br />
+        Please make the screen width smaller.
+      </span>
     </div>
 
     <script
