--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Gyugu KokoaClone (This is og:title)" />
+    <meta property="og:image" content="screenshots/01.png" />
     <title>Welcome to KokoaClone</title>
   </head>
   <body>
