--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Gyugu KokoaClone (This is og:title)" />
     <meta property="og:image" content="screenshots/01.png" />
+    <meta property="og:description" content="(This is og:description)" />
+
     <title>Welcome to KokoaClone</title>
   </head>
   <body>
